# flutter-mcp

./: .dockerignore  .gitignore  .pypirc.template  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ERROR_HANDLING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  QUICK_FIX.md  README.md  RELEASE_GUIDE.md  build.spec  cli.py  context7-installation-analysis.md  docker-compose.yml  project-tasks.csv  pyproject.toml  server.py  setup.py  task-summary.md  test-server.sh  test_integration.py  test_manual.py  test_search.py  test_tools.py
.github/workflows/: build-executables.yml  publish-pypi.yml
docker/: Dockerfile  docker-compose.yml
docs/: CLIENT-CONFIGURATIONS.md  CONTRIBUTING.md  DEVELOPMENT.md  PUBLISHING.md  README.md  TOOL-CONSOLIDATION-PLAN.md  VERSION_SPECIFICATION.md  api-reference.md  token-counting-analysis.md  token-management-implementation.md  truncation-algorithm.md
docs/planning/: README-highlights.md  context7-marketing-analysis.md  flutter-mcp-project-summary.md  ingestion-strategy.md  initial-vision.md  project-summary.md  project-tasks.csv
examples/: token_management_demo.py  truncation_demo.py
npm-wrapper/: .gitignore  README.md  index.js  package.json  publish.sh
npm-wrapper/scripts/: install.js
scripts/: build-executables.sh  publish-pypi.sh  test-server.sh
src/flutter_mcp/: __init__.py  __main__.py  cache.py  cli.py  error_handling.py  logging_utils.py  recovery.py  server.py  token_manager.py  truncation.py
tests/: __init__.py  test_integration.py  test_token_management.py  test_tools.py  test_truncation.py
